@@ -1,5 +1,5 @@
 [versions]
-crate_server = 0.47.7
+crate_server = 0.49.2
 
 Jinja2 = 2.7.3
 MarkupSafe = 0.23
@@ -7,7 +7,7 @@ Sphinx = 1.2.3
 appdirs = 1.4.0
 argparse = 1.1
 collective.recipe.omelette = 0.16
-crate = 0.13.0
+crate = 0.13.2
 crate-docs-theme = 0.3.8
 docutils = 0.12
 gp.recipe.tox = 0.3
